--- a/projects/amenities.yml
+++ b/projects/amenities.yml
@@ -1,6 +1,7 @@
 project_name: amenities  # also the folder name of the dataset that under data_path folder
 train_set: train
 val_set: valid
+test_set: test
 num_gpus: 1
 
 # mean and std in RGB order, actually this part should remain unchanged as long as your dataset is similar to coco.
